<resources>
    <string name="app_name">NDP Songs Compilation</string>
    <string name="song">Song Title</string>
    <string name="singers">Singers</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="insert">Insert</string>
    <string name="showlist">Show all songs with 5 stars</string>
    <string name="list">Show List</string>
    <string name="lv">lv</string>
    <string name="id">Song ID</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>